--- a/.github/workflows/main_chatterbox-backend.yml
+++ b/.github/workflows/main_chatterbox-backend.yml
@@ -49,11 +49,19 @@ jobs:
           name: node-app
       
       - name: Login to Azure
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FF8AD95E152A4D34B6590CE3212CD8C8 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_477C15A0A71D43F7B17943FF43363AB3 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3A38B09408044D2C807DF2A129DABFD8 }}
+          enable-AzPSSession: true
+
+      - name: Azure CLI script
+        uses: azure/cli@v1
+        with:
+            azcliversion: latest
+            inlineScript: |
+              az account show
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
